--- a/JOR.html
+++ b/JOR.html
@@ -51,8 +51,18 @@
         post_trial_gap: 1500
     };
 
-    //First 7 are study cards, then rest alternate
 
+
+
+
+
+
+
+
+
+    //TODO: WORKING ON THIS SECTION:
+
+    //First 7 are study cards, then rest alternate
     let study_card = {
         type: 'html-keyboard-response',
         stimulus: jsPsych.timelineVariable('stimulus'),
@@ -81,52 +91,6 @@
         randomize_order: false,
         repetitions: 107
     }
-
-    // let test_stimuli = [
-    //   { stimulus: "img/blue.png", data: { test_part: 'test', correct_response: 'f' } },
-    //   { stimulus: "img/orange.png", data: { test_part: 'test', correct_response: 'j' } }
-    // ];
-
-    // let fixation = {
-    //     type: 'html-keyboard-response',
-    //     stimulus: '<div style="font-size:60px;">+</div>',
-    //     choices: jsPsych.NO_KEYS,
-    //     trial_duration: function(){
-    //         return jsPsych.randomization.sampleWithoutReplacement([250, 500, 750, 1000, 1250, 1500, 1750, 2000], 1)[0];
-    //     },
-    //     data: {test_part: 'fixation'}
-    // };
-
-    // let test = {
-    //     type: 'html-keyboard-response',
-    //     stimulus: jsPsych.timelineVariable('stimulus'),
-    //     choices: ['f', 'j'],
-    //     data: jsPsych.timelineVariable('data'),
-    //     on_finish: function(data){
-    //         data.correct = data.key_press == jsPsych.pluginAPI.convertKeyCharacterToKeyCode(data.correct_response);
-    //     }
-    // };
-
-    // let test_procedure = {
-    //     timeline: [fixation, test],
-    //     timeline_variables: test_stimuli,
-    //     randomize_order: true,
-    //     repetitions: 2
-    // };
-
-    // let debrief_block = {
-    //     type: "html-keyboard-response",
-    //     stimulus: function() {
-    //         let trials = jsPsych.data.get().filter({test_part: 'test'});
-    //         let correct_trials = trials.filter({correct: true});
-    //         let accuracy = Math.round(correct_trials.count() / trials.count() * 100);
-    //         let rt = Math.round(correct_trials.select('rt').mean());
-
-    //         return "<p>You responded correctly on "+accuracy+"% of the trials.</p>"+
-    //         "<p>Your average response time was "+rt+"ms.</p>"+
-    //         "<p>Press any key to complete the experiment. Thank you!</p>";
-    //     }
-    // };
 
     // Create a timeline and add events:
     let timeline = [];
