experimental design complete

--- a/kJOR_Demo.html
+++ b/kJOR_Demo.html
@@ -14,7 +14,7 @@
 
     // Variable that changes the exp based on if Mike says subjects should be able to decided
     // how long they look at a card or if it should be timed (with a constant time ofc)
-    var mike_says_timed = false;
+    var mike_says_timed = true;
 
     // How long Mike says the study card would last
     var length = "four seconds";
